Fixed table issue on mobile, enriched timeline view

--- a/src/theme/overwrite.table.scss
+++ b/src/theme/overwrite.table.scss
@@ -13,7 +13,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .v-data-table-header {
+  .extended .v-data-table-header {
     display: none;
   }
 }
